# db_in_python

./: README.md  compose.yml  pyproject.toml
sqla3/: create_main.py
sqla3/conf/: db_session.py
sqla3/models/: __all__models.py  aditivo_nutritivo.py  conservante.py  ingrediente.py  lote.py  nota_fiscal.py  picole.py  revendedor.py  sabor.py  tipo_embalage.py  tipo_picole.py
src/: app.py
