[project]
name = "db-in-py"
version = "0.1.0"
description = ""
authors = [
    {name = "rafael.amorim",email = "raffaekk@gmail.com"}
]
readme = "README.md"
requires-python = "=3.11.5"
dependencies = [
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "oracledb (>=3.1.1,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]

[tool.poetry]
packages = [{include = "db_in_py", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
